--- a/Algortimos/AlgoritmoCVRP/pom.xml
+++ b/Algortimos/AlgoritmoCVRP/pom.xml
@@ -13,4 +13,14 @@
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
 
+    <!-- https://mvnrepository.com/artifact/com.google.ortools/ortools-java -->
+    <dependencies>
+        <dependency>
+            <groupId>com.google.ortools</groupId>
+            <artifactId>ortools-java</artifactId>
+            <version>9.0.9048</version>
+        </dependency>
+    </dependencies>
+
+
 </project>
