--- a/Frontend/router-fast-front/package.json
+++ b/Frontend/router-fast-front/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.5",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.0.0",
