--- a/Algortimos/AlgoritmoCVRP/pom.xml
+++ b/Algortimos/AlgoritmoCVRP/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>ortools-java</artifactId>
             <version>9.0.9048</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
