--- a/Backend/DP1SAG/src/main/resources/application.properties
+++ b/Backend/DP1SAG/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=routerfast666R
 spring.jpa.hibernate.ddl-auto=update
 
 
+server.port=8888 
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.check_nullability=true
