--- a/Backend/DP1SAG/src/main/resources/application.properties
+++ b/Backend/DP1SAG/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 server.port=9999
-
+spring.mvc.converters.preferred-json-mapper=gson
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.check_nullability=true
 
