integración con front y tiempos

--- a/Backend/DP1SAG/src/main/resources/application.properties
+++ b/Backend/DP1SAG/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url = jdbc:mysql://routerfast.cslslqp4q7ec.us-east-1.rds.amazonaws.com:3306/routerfast
 spring.datasource.username=admin
 spring.datasource.password=routerfast666R
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 server.port=9999
