--- a/Backend/DP1SAG/pom.xml
+++ b/Backend/DP1SAG/pom.xml
@@ -82,6 +82,16 @@
             <version>17</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-messaging</artifactId>
+            <version>5.3.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
